	  the board provides the option CONFIG_BOARDCTL_POWEROFF.  The command can
	  also be used to reset the system if CONFIG_BOARDCTL_RESET=y.
	  (2015-07-04).
	* apps/system/poweroff:  Remove the system poweroff command.  This is
	  replaced with the NSH shutdown command (2015-07-02).
	* apps/nshlib:  Add support for a uname command (2015-07-04).
	* apps/system/sysinfo:  Remove the system sysinfo command.  This is
	  replaced with the NSH uname command (2015-07-04).
	* apps/syste/netdb:  Add a command to access the network database
	  (2015-07-08).
	* apps/netuils/dnsclient and include/netutils/dnsclient.h:  Move the
	  DNS client logic into the NuttX C library.  It is a necessary part
	  for the full implementation of the netdb logic and provides more
	  flexibility in that location (2015-07-10).
	* apps/examples/ and apps/netutils: Remove calls to obsolete, non-
	  functional DNS interfaces (2015-07-11).
	* apps/netutils and apps/nshlib: Replace calls to the non-standard
	  dns_gethotip with calls to standard gethostbyname (2015-07-11).
	* apps/netutils/netlib and other files: Create netlib wrapper functions
	  around dns_getserver() and dns_setserver() to isolate application
	  code from changes to those interfaces (2015-07-12).
	* apps/nshlib:  Add an nslookup command (2015-07-13).
	* apps/examples/nxlines:  If CONFIG_NX_ANTIALIASING=y, then the nxlines
	  example now erases a line that is 2 pixels longer and 2 pixels wideri
	  than the line it drew.  That eliminates edges effects due to applying
	  the anti-aliasing algorithm twice.  A better solution would be to makei
	  anti-aliasing an option for each graphics call so you would rend the
	  line with anti-aliasing ON and clear it with anti-aliasing OFF. but I
	  don't have the wherewithal for that change today (2015-04-14)`.
	* apps/nshlib and apps/examaples/thttpd:  Change decoding to handle the
	  increased size of the scheduling policy field in the TCB (2015-07-23).
